fixed mobile logo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,9 @@ footer{
 }
 
 @media screen and (max-width: 530px) {
+	.logo{
+		margin: 50px 0 0;
+	}
 	.headerSpan {
 		min-height: 140px;
 	}
@@ -218,7 +221,6 @@ footer{
 
 @media (max-width:480px){
 	.logo{
-		margin: 50px 0 30px;
 		width: 100%;
 		height: 137px;
 	}
